--- a/Macchina_OBD2/platformio.ini
+++ b/Macchina_OBD2/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelsam
 board = macchina2
 framework = arduino
+lib_deps =
+  https://github.com/collin80/due_can.git
+  https://github.com/collin80/can_common.git
